--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</label>
 			</div>
 
-			<input class="todo-text" maxlength="20" placeholder="Add a name for your todo!"/>
+			<input class="todo-text" maxlength="20" placeholder="Klikkaa lisätäksesi nimen"/>
 			
 			<div class="todo-flag">
 				<svg xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
